# clang-format-rs

./: CHANGELOG.md  Cargo.toml  README.md  tests.sh
.github/workflows/: github-clang-format-tests.yml
src/: lib.rs
