# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "clang-format"
version = "0.3.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A basic clang-format Rust wrapper"
repository = "https://github.com/KDAB/clang-format-rs/"
readme = "README.md"

exclude=[".github/", "tests.sh"]

[dependencies]
thiserror = "1.0"
